fix(cards): scroll and style icon cards on mobile

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -112,3 +112,66 @@
     position: absolute;
     left: 89px;
 }
+
+.cards.icons ul {
+    display: flex;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+}
+
+main .cards.icons ul::-webkit-scrollbar {
+  display: none;
+}
+
+.cards.icons ul li {
+    scroll-snap-align: start;
+    flex-shrink: 0;
+    width: 100%;
+    display: block;
+    border-left: 1px solid #999;
+    padding-left: 20px;
+}
+
+.cards.icons .cards-card-image {
+    max-width: 150px;
+}
+
+.cards.icons .cards-card-image img {
+    object-fit: contain;
+    height: 150px;
+}
+
+.cards.icons .cards-card-body {
+    position: relative;
+    background-color: var(--background-color);
+    text-align: left;
+}
+
+.cards.icons .cards-card-body h3 + p {
+    display: block;
+    color: var(--text-color);
+    text-align: left;
+}
+
+.cards.icons .cards-card-body h3 a {
+    color: var(--link-color);
+}
+
+.cards.icons .cards-card-body h3 {
+    text-align: left;
+}
+
+.cards.icons .cards-card-body a::after {
+    content: "";
+    display: inline-block;
+    width: 1.1em;
+    height: 1.1em;
+    border: 1px solid var(--link-hover-color);
+    margin-left: 0.5em;
+    margin-bottom: -0.2em;
+    border-radius: 50%;
+    background-position: 0.15em;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 32"><path fill="red" class="cls-1" d="M16.66,15.29l-6.9-7a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.43L14.54,16,8.35,22.28a1,1,0,0,0,0,1.43,1,1,0,0,0,1.41,0l6.9-7A1,1,0,0,0,16.66,15.29Z"></path></svg>');
+
+}
